<resources>
    <string name="app_name">BOOKSHOP</string>
    <string name="customdialogtitle">Filterd by book category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="option1">Filtered by Category</string>
    <string name="option2">Find by QR code</string>
    <string name="btnFind">OK</string>
    <string name="search_title">Search...</string>

    <string-array name="category">
        <item>All</item>
        <item>children</item>
        <item>finance</item>
        <item>non-fiction</item>
        <item>technical</item>

    </string-array>

    <string name="label_author">Author</string>
    <string name="label_title">Title</string>
    <string name="label_bookID">Book ID</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_categoryID">Category ID</string>
    <string name="label_price">Price</string>
    <string name="label_stock">Stock</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnUpdate">Update</string>
</resources>
